[gd_scene load_steps=9 format=2]

[ext_resource path="res://TowerRelated/AbstractTower.tscn" type="PackedScene" id=1]
[ext_resource path="res://TowerRelated/Color_Violet/Bounded/Bounded_Omni.png" type="Texture" id=2]
[ext_resource path="res://TowerRelated/Color_Violet/Bounded/Bounded_Omni_NoHealth.png" type="Texture" id=3]
[ext_resource path="res://TowerRelated/Color_Violet/Bounded/Assets/Bounded_Chains.png" type="Texture" id=4]
[ext_resource path="res://TowerRelated/Color_Violet/Bounded/Bounded.gd" type="Script" id=5]
[ext_resource path="res://TowerRelated/Color_Violet/Bounded/Bounded_BeamDrawLayer.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Omni",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Omni_NoHealth",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.1717, 18.785 )

[node name="Bounded" instance=ExtResource( 1 )]
position = Vector2( -0.874146, -0.749146 )
script = ExtResource( 5 )

[node name="TowerBase" parent="." index="0"]
position = Vector2( 0.5, -12 )

[node name="BeamDrawLayer" type="Node2D" parent="TowerBase/KnockUpLayer" index="0"]
script = ExtResource( 6 )

[node name="BaseSprites" parent="TowerBase/KnockUpLayer" index="1"]
frames = SubResource( 1 )
animation = "Omni"

[node name="ChainsLeft" type="Sprite" parent="TowerBase/KnockUpLayer" index="2"]
texture = ExtResource( 4 )
offset = Vector2( -13, 7 )

[node name="ChainsRight" type="Sprite" parent="TowerBase/KnockUpLayer" index="3"]
texture = ExtResource( 4 )
offset = Vector2( 13, 7 )

[node name="CollisionShape" parent="." index="1"]
position = Vector2( 1, -12 )
shape = SubResource( 2 )

[node name="IngredientDeclinePic" parent="." index="4"]
visible = false

[node name="DoesNotApplyPic" parent="." index="5"]
visible = false
